[gd_scene load_steps=8 format=2]

[ext_resource path="res://CaixaEscolhas.png" type="Texture" id=1]
[ext_resource path="res://Area2D.gd" type="Script" id=2]
[ext_resource path="res://nasa.gd" type="Script" id=3]
[ext_resource path="res://Area2D2.gd" type="Script" id=4]
[ext_resource path="res://Area2D3.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 448.0
margin_bottom = 536.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="codigo" type="Label" parent="ColorRect"]
margin_left = 24.0
margin_top = 24.0
margin_right = 394.0
margin_bottom = 344.0
text = " func _process(delta):
 if simulação:

 var nota1 = 10
 var nota2 = 5 
 var nota3 = 6

 #aqui vai a expressão matemática para calcular a média#





 #se a média for igual ou maior que sete \"APROVADO\"#
 #se for menor que sete vai aparecer \"REPROVADO\"#
 
if média >= 7: status = \"APROVADO(A)\"
 else: status = \"REPROVADO(A)\"
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 712, 88 )
script = ExtResource( 2 )

[node name="CaixaEscolhas" type="Sprite" parent="Area2D"]
scale = Vector2( 0.102448, 0.0892858 )
texture = ExtResource( 1 )

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label1" type="Label" parent="Area2D"]
margin_left = -92.0
margin_top = -8.0
margin_right = 92.0
margin_bottom = 16.0
text = "média = (10 + 5 + 6) / 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 712, 168 )
script = ExtResource( 4 )

[node name="CaixaEscolhas2" type="Sprite" parent="Area2D2"]
position = Vector2( 0.00012207, 0 )
scale = Vector2( 0.102448, 0.0892858 )
texture = ExtResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0.00012207, 0 )
shape = SubResource( 1 )

[node name="Label2" type="Label" parent="Area2D2"]
margin_left = -84.0
margin_top = -24.0
margin_right = 84.0
margin_bottom = 8.0
text = "
média = (10  *  5  *  6)   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 712, 248 )
script = ExtResource( 5 )

[node name="CaixaEscolhas3" type="Sprite" parent="Area2D3"]
scale = Vector2( 0.102448, 0.0892858 )
texture = ExtResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[node name="Label3" type="Label" parent="Area2D3"]
margin_left = -84.0
margin_top = -24.0
margin_right = 84.0
margin_bottom = 8.0
text = "
média = (10  -  5  -  6)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D4" type="KinematicBody2D" parent="." groups=["CERTO"]]
position = Vector2( 216, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource( 2 )

[node name="CaixaEscolhas" type="Sprite" parent="."]
position = Vector2( 719.625, 460.25 )
scale = Vector2( 0.137135, 0.143544 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 680.0
margin_top = 448.0
margin_right = 785.0
margin_bottom = 472.0
text = "Verificar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 584.0
margin_top = 416.0
margin_right = 848.0
margin_bottom = 496.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_Area2D2_body_exited"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="body_entered" from="Area2D3" to="Area2D3" method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="Area2D3" method="_on_Area2D3_body_exited"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
